--- a/mysite/polls/templates/index.html
+++ b/mysite/polls/templates/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-
+系统首页
 <form action="" method="post">
     <input type="text" name="price">
     <input type="submit">
